fixed font contrast

--- a/lesson-4/css/small.css
+++ b/lesson-4/css/small.css
@@ -51,7 +51,7 @@ nav{
 
  .dropdown-content a {
      text-decoration: none;
-     color: #ffffff;
+     color: black;
      font-weight: 600;
     }
 
@@ -79,7 +79,7 @@ h2{
     border: 1px dashed black;
     padding: 15px;
     background-color: white;
-    color: gray;
+    color: black;
     font-style: italic;
     text-align: center;
 }
